# OQR

./: .env.example  .gitignore  .gitlab-ci.yml  CAMERA_FIX_SUMMARY.md  CAMERA_TROUBLESHOOTING.md  CLAUDE.md  DOCUMENTATION.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  PLAN.md  QUICKSTART.md  README.md  TESTING_SUMMARY.md  changes.md  create_admin.bat  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  sife_plan.md  smooth-hatching-diffie.md  start.bat  start.sh  zhorik_plan.md
.claude/: settings.local.json
backend/: alembic.ini  create_test_data.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  004_institutions_and_participant_dob.py  005_rooms_and_seating.py  006_documents.py  007_invigilator_and_answer_sheets.py  008_make_participant_grade_nullable.py  2126be9ffb45_make_scan_attempt_id_nullable.py  510093419eba_add_raw_token_to_entry_tokens.py
backend/scripts/: init_admin.py  seed_test_data.py
backend/src/olimpqr/: __init__.py  config.py  main.py
backend/tests/: __init__.py  conftest.py
backend/tests/e2e/: conftest.py  test_comprehensive_workflow.py  test_full_workflow.py  test_ocr_pipeline.py  test_participant_flow.py
backend/tests/integration/: conftest.py  test_admin_api.py  test_auth_api.py  test_competitions_api.py  test_health_and_security.py  test_rooms_api.py  (+2 more)
docker/backend/: Dockerfile
docker/celery/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
(+193 files in other folders)
